syntax = "proto3";

package lobby;
option go_package = "github.com/puoxiu/cogame/pkg/lobby_proto";


// 已有的基础消息（保留并补充）
message MessageHeader {
  uint32 msg_id = 1;
  uint32 seq = 2;
  uint64 user_id = 3;
  uint32 timestamp = 4;
  string session_id = 5;
}

message BaseRequest {
  MessageHeader header = 1;
  bytes data = 2;
}

message BaseResponse {
  MessageHeader header = 1;
  int32 code = 2;
  string msg = 3;
  bytes data = 4;
}



// 大厅服务定义
service LobbyService {
  // 获取房间列表
  rpc GetRoomList (BaseRequest) returns (BaseResponse);
  // 创建房间
  rpc CreateRoom (BaseRequest) returns (BaseResponse);
  // 加入房间
  rpc JoinRoom (BaseRequest) returns (BaseResponse);
  // 离开房间
  rpc LeaveRoom (BaseRequest) returns (BaseResponse);
}

message GamePlayerInfo {
  uint64 user_id = 1;
  string nickname = 2;
  int32 level = 3;
  int64 score = 4;
  int32 status = 5;
}

message RoomInfo {
  uint64 room_id = 1;
  string room_name = 2;
  int32 game_type = 3;
  int32 current_players = 4;
  int32 max_players = 5;
  int32 status = 6;
  bool is_private = 7;
  GamePlayerInfo owner = 8;
  repeated GamePlayerInfo players = 9;
  uint32 created_time = 10;
}

message RoomListResponse {
  repeated RoomInfo rooms = 1;
  int32 total = 2;
}

message CreateRoomRequest {
  string room_name = 1;
  int32 game_type = 2;
  int32 max_players = 3;
  bool is_private = 4;
  string password = 5;
}

message JoinRoomRequest {
  uint64 room_id = 1;
  string password = 2;
}



// protoc --go_out=pkg/lobby_proto --go_opt=paths=source_relative --go-grpc_out=pkg/lobby_proto --go-grpc_opt=paths=source_relative proto/lobby.proto
